@@ -32,6 +32,12 @@
 <BR>
 {button id="showmessage" onclick="location.href = '?m=messageinfo&id={$message.id}';" label="Info" icon="info"}
 {button id="msglist" onclick="location.href = '?m=messagelist';" label="Messages List" icon="list"}
+{if isset($backto)}
+	{textformat assign="onclick" wrap=5000}
+		location.href = '{$backto}';
+	{/textformat}
+	{button id="backto" onclick=$onclick label="Back" icon="back"}
+{/if}
 <BR>
 	{if $recipcount}
 <BR><B>{trans("Sending messages to:")}</B><BR>
